made arrows smaller and placed nav to right

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,8 @@ header {
 
 nav {
   display: flex;
+  /*nav on right side*/
+  justify-content: flex-end;
   background-color: #d8a47f;
 }
 
@@ -40,6 +42,8 @@ footer {
 
 .product {
   display: flex;
+  /*alligns to top of element*/
+  align-items: flex-start;
   width: 90%;
   margin: 1% auto;
 }
@@ -50,6 +54,7 @@ footer {
 
 .product-slideshow {
   display: flex;
+  align-items: center
 }
 
 .product-image {
